syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Ligric.Protos";

package Ligric.Protos;

service Futures {
    rpc OrdersSubscribe(FuturesSubscribeRequest) returns (stream OrdersChanged);
    rpc ValuesSubscribe(FuturesSubscribeRequest) returns (stream ValuesChanged);
}

message FuturesSubscribeRequest
{
	int64 userId = 1;
	int64 UserApiId = 2;
}

message OrdersChanged {
	FuturesOrder Order = 1;
	Action action = 2;
}

message ValuesChanged {
	FuturesValue Value = 1;
	Action action = 2;
}

message PositionsChanged {
	string Symbol = 1;
	string OpenPrice = 2;
	Action action = 3;
}

message FuturesOrder {
	int64 id = 1;
	string symbol = 2;
	Side side = 3;
	string quantity = 4;
	string price = 5;
	string value = 6;
}

message FuturesValue
{
	string Symbol = 1;
	string Value = 2;
}

enum Side
{
	Sell = 0;
	Buy = 1;
}
